Replaced PlayStats are rendered using Document API